--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
 </head>
 
 <body>
-
+    <table>
+        <thead>
+            <tr>
+                <th>Title</th>
+                <th>Author</th>
+                <th>Read</th>
+                <th>Id</th>
+            </tr>
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
 </body>
 
 </html>
