Table read and delete buttons added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <th>Author</th>
                 <th>Read</th>
                 <th>Id</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
