--- a/index.html
+++ b/index.html
@@ -10,19 +10,31 @@
 </head>
 
 <body>
-    <table id="library-table">
-        <thead>
-            <tr>
-                <th>Title</th>
-                <th>Author</th>
-                <th>Read</th>
-                <th>Id</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        </tbody>
-    </table>
+    <div class="container">
+        <table id="library-table">
+            <thead>
+                <tr>
+                    <th>Title</th>
+                    <th>Author</th>
+                    <th>Read</th>
+                    <th>Id</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+        <div class="form-container">
+            <form action="">
+                <input type="text" id="title" placeholder="Title">
+                <input type="text" id="author" placeholder="Author">
+                <input type="checkbox" id="read" placeholder="Author">
+                <label for="read">Read</label>
+                <button type="submit">Add</button>
+            </form>
+        </div>
+    </div>
 </body>
+
 
 </html>
