--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             </tbody>
         </table>
         <div class="form-container">
-            <form action="">
-                <input type="text" id="title" placeholder="Title">
-                <input type="text" id="author" placeholder="Author">
-                <input type="checkbox" id="read" placeholder="Author">
+            <form id="form" action="">
+                <input type="text" id="title" name="title" placeholder="Title">
+                <input type="text" id="author" name="author" placeholder="Author">
+                <input type="checkbox" id="read" name="read" placeholder="Author">
                 <label for="read">Read</label>
                 <button type="submit">Add</button>
             </form>
