--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <div class="container">
+        <h1>My Library</h1>
         <table id="library-table">
             <thead>
                 <tr>
