--- a/index.html
+++ b/index.html
@@ -12,6 +12,34 @@
 <body>
     <div class="container">
         <h1>My Library</h1>
+
+        <div class="grid">
+            <div class="card">
+                <div>Title</div>
+                <div>Author</div>
+                <div>Read</div>
+                <div><button class="btn-read">Read</button><button class="btn-delete">Delete</button></div>
+            </div>
+            <div class="card">
+                <div>Title</div>
+                <div>Author</div>
+                <div>Read</div>
+                <div>Buttons</div>
+            </div>
+            <div class="card">
+                <div>Title</div>
+                <div>Author</div>
+                <div>Read</div>
+                <div>Buttons</div>
+            </div>
+            <div class="card">
+                <div>Title</div>
+                <div>Author</div>
+                <div>Read</div>
+                <div>Buttons</div>
+            </div>
+        </div>
+
         <table id="library-table">
             <thead>
                 <tr>
