--- a/index.html
+++ b/index.html
@@ -20,26 +20,23 @@
 
         </div>
 
-        <dialog open>
+        <dialog show id="dialog">
             <div class="form-container">
                 <form id="form" action="" method="dialog">
-                    <div class="close-button">
-                        X
-                    </div>
-                    <div>
+                    <div id="modal-title">
                         <label for="title">Title: </label>
-                        <input type="text" id="title" name="title" placeholder="">
+                        <input type="text" id="title" name="title" placeholder="The Stand">
                     </div>
-                    <div>
+                    <div id="modal-author">
                         <label for="author">Author: </label>
-                        <input type="text" id="author" name="author" placeholder="Author">
+                        <input type="text" id="author" name="author" placeholder="Stephen King">
                     </div>
-                    <div>
+                    <div id="modal-read">
                         <label for="read">Read: </label>
                         <input type="checkbox" id="read" name="read" placeholder="Author">
                     </div>
                     <button type="submit">Add</button>
-                    <button>X</button>
+                    <button class="btn-delete" type="button">Close</button>
                 </form>
             </div>
         </dialog>
